# tetris-game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: game.cpp  render.cpp  render.h  stb_image.h  tetris.cpp  tetris.h  util.cpp  util.h
tetris/: game.cpp  render.cpp  render.h  stb_image.h  tetris.cpp  util.cpp  util.h
vs2017_project/: vs2017_project.sln  vs2017_project.vcxproj  vs2017_project.vcxproj.filters
vs2017_project/lib/: freetype271.lib
